[gd_scene load_steps=4 format=2]

[ext_resource path="res://SpaceInvasion/Game.gd" type="Script" id=1]
[ext_resource path="res://assets/base.tres" type="Theme" id=2]
[ext_resource path="res://SpaceInvasion/Grid/GridSquare.tscn" type="PackedScene" id=3]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.564706, 0.839216, 1, 1 )

[node name="Score" type="Control" parent="MarginContainer/ColorRect"]
margin_left = 150.0
margin_right = 190.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grid" type="Control" parent="MarginContainer/ColorRect"]
margin_left = 350.0
margin_top = 170.0
margin_right = 390.0
margin_bottom = 210.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridUp" type="Control" parent="MarginContainer/ColorRect/Grid"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Square1" parent="MarginContainer/ColorRect/Grid/GridUp" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 40.0
margin_bottom = 40.0

[node name="Square2" parent="MarginContainer/ColorRect/Grid/GridUp" instance=ExtResource( 3 )]
margin_left = 110.0
margin_top = 0.0
margin_right = 150.0
margin_bottom = 40.0
hide_left = true
hide_right = true

[node name="Square3" parent="MarginContainer/ColorRect/Grid/GridUp" instance=ExtResource( 3 )]
margin_left = 220.0
margin_top = 0.0
margin_right = 260.0
margin_bottom = 40.0

[node name="GridMiddle" type="Control" parent="MarginContainer/ColorRect/Grid"]
margin_top = 120.0
margin_right = 40.0
margin_bottom = 160.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Square1" parent="MarginContainer/ColorRect/Grid/GridMiddle" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 40.0
margin_bottom = 40.0
hide_up = true
hide_down = true

[node name="Square2" parent="MarginContainer/ColorRect/Grid/GridMiddle" instance=ExtResource( 3 )]
margin_left = 110.0
margin_top = 0.0
margin_right = 150.0
margin_bottom = 40.0
hide_up = true
hide_down = true

[node name="Square3" parent="MarginContainer/ColorRect/Grid/GridMiddle" instance=ExtResource( 3 )]
margin_left = 220.0
margin_top = 0.0
margin_right = 260.0
margin_bottom = 40.0
hide_up = true
hide_down = true

[node name="GridDown" type="Control" parent="MarginContainer/ColorRect/Grid"]
margin_top = 240.0
margin_right = 40.0
margin_bottom = 280.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Square1" parent="MarginContainer/ColorRect/Grid/GridDown" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 40.0
margin_bottom = 40.0

[node name="Square2" parent="MarginContainer/ColorRect/Grid/GridDown" instance=ExtResource( 3 )]
margin_left = 110.0
margin_top = 0.0
margin_right = 150.0
margin_bottom = 40.0
hide_left = true
hide_right = true

[node name="Square3" parent="MarginContainer/ColorRect/Grid/GridDown" instance=ExtResource( 3 )]
margin_left = 220.0
margin_top = 0.0
margin_right = 260.0
margin_bottom = 40.0

[node name="Control3" type="Control" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Control3"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -40.0
margin_right = 154.0
size_flags_horizontal = 4
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="MarginContainer/Control3/HBoxContainer"]
margin_top = 4.0
margin_right = 52.0
margin_bottom = 35.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 2 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TryAgain" type="Button" parent="MarginContainer/Control3/HBoxContainer"]
visible = false
margin_left = 56.0
margin_top = 4.0
margin_right = 144.0
margin_bottom = 35.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 2 )
text = "Try again"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="MarginContainer/Control3/HBoxContainer/Back" to="." method="_on_Back_pressed"]
